# component-jira

./: .gitignore  Dockerfile  README.md  change_log.md  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configSchema.json  configuration_description.md
component_config/sample-config/: config.json
scripts/: build_n_test.sh
src/: client.py  component.py  configuration.py  main.py  result.py  run.py
src/jira/: client.py  component.py  result.py
