[project]
name = "component-jira"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "aiolimiter>=1.2.1",
    "dataconf>=3.6.0",
    "dateparser>=1.2.2",
    "freezegun>=1.5.5",
    "keboola-component>=1.6.13",
    "keboola-http-client>=1.2.0",
    "mock>=5.2.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
